# camin-efl

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac
cainit/: cainit.c
camin/: camin.c
etc/: machine_spec.xml
include/: amin.h  amin_command_interface.h  amin_elt.h  amin_filter_interface.h  amin_machine.h  amin_machine_dispatcher.h  amin_machine_filter_dispatcher.h  amin_mkdir_command.h  amin_type_filter.h  amin_xml_base.h  common.h  config.h.in  dispatcher.h  document.h  elt.h  machine.h  machine_spec.h  xinclude.h  xml_sax_base.h
lib/: Makefile.am  amin.c  amin_elt.c  amin_machine.c  amin_xml_base.c  elt.c  machine.c  xml_sax_base.c
lib/commands/: amin_mkdir_command.c
lib/filters/: amin_type_filter.c
lib/interfaces/: amin_filter_interface.c
lib/machine/: amin_machine_dispatcher.c  dispatcher.c  machine_spec.c
lib/machine/filter/: amin_machine_filter_dispatcher.c
lib/machine/spec/: document.c
libamin/: .gitignore  CMakeLists.txt  amin.c  build_classes.sh  xml_sax_base.c
libamin/classes/: amin.eo  amin_elt.eo  build_classes.sh  xml_sax_base.eo
libamin/classes_old/: xml_sax_base.eo
libamin/include/: amin.eo.h  amin_elt.eo.h  amin_machine_dispatcher.h  common.h  config.h  document.h  xml_sax_base.eo.h  xml_sax_base_types.h
libamin/machine/: amin_machine_dispatcher.c  machine_spec.c
libamin/machine/filter/: xinclude.c
libamin/machine/spec/: document.c
libamin/src/: amin.c  amin.eo  amin.eo.c  amin_elt.c  amin_elt.eo  amin_elt.eo.c  amin_elt.eo.h  amin_machine_spec.c  amin_machine_spec.eo  amin_machine_spec.eo.c  amin_machine_spec.eo.h  amin_machine_spec_data.c  amin_machine_spec_data.eo  amin_machine_spec_document.c  amin_machine_spec_document.eo  element.c  element.eo  element_data.eot  element_data.h  filter_data.eot  machine_spec.xml  xml_sax_base.c  xml_sax_base.eo  xml_sax_base.eo.c
libamin/src/eo/: amin_elt.eo
libamin/src_old/: amin.eo  amin.eo.c  amin.eo.h  amin_machine_spec.c  xml_sax_base.eo  xml_sax_base.eo.h
libamin/stage/: amin.c  amin.eo  amin.eo.c  amin.eo.h  amin_elt.c  amin_elt.eo  amin_machine_spec.c  amin_machine_spec.eo  amin_machine_spec.eo.c  amin_machine_spec.eo.h  amin_machine_spec_data.c  amin_machine_spec_data.eo  amin_machine_spec_data.eo.c  amin_machine_spec_data.eo.c.old  amin_machine_spec_data.eo.h  amin_machine_spec_data.eo.h.old  amin_machine_spec_document.c  amin_machine_spec_document.eo  amin_machine_spec_document.eo.c  amin_machine_spec_document.eo.h  common.h  xml_sax_base.c  xml_sax_base.eo  xml_sax_base.eo.c  xml_sax_base.eo.h  xml_sax_base.eo.h.old
src/lib/: CMakeLists.txt  amin.c  elt.c  xml_sax_base.c
src/lib/machine/: CMakeLists.txt  amin_machine_dispatcher.c  machine_spec.c
src/lib/machine/filter/: amin_machine_filter_dispatcher.c  xinclude.c
src/lib/machine/spec/: CMakeLists.txt  document.c
tests/: test4.xml
