 AC_INIT(camin, 0.0.1, swishyTM@gmail.com)
 AC_PREREQ(2.52)
 AC_CONFIG_SRCDIR(configure.ac)
 AM_CONFIG_HEADER(config.h)
 AC_PROG_CC
 LT_INIT
 AM_INIT_AUTOMAKE(1.6 dist-bzip2 [subdir-objects])
 PKG_CHECK_MODULES([ECORE], ecore ecore-con)
 PKG_CHECK_MODULES([EINA], eina)
 AC_OUTPUT(Makefile)
 AC_CONFIG_MACRO_DIR([m4])
